# p2108

./: .clang-format  .gitignore  .gitmodules  .zenodo.json  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GitHubRepoPublicReleaseApproval.md  README.md
.github/workflows/: ctest.yml  doxygen.yml  release.yml
app/: AeronauticalStatisticalModel.cpp  CMakeLists.txt  Driver.h  Errors.h  HeightGainTerminalCorrectionModel.cpp  Labels.h  README.md  Reporting.cpp  Structs.h  Tags.h  main.cpp
app/data/: i_asm.txt  i_hgtcm.txt  i_tsm.txt  o_asm.txt  o_hgtcm.txt  o_tsm.txt
app/include/: CommaSeparatedIterator.h  Driver.h  Errors.h  Labels.h  ReturnCodes.h  Structs.h  Tags.h
app/src/: AeronauticalStatisticalModel.cpp  CMakeLists.txt  Driver.cpp  DriverUtils.cpp  HeightGainTerminalCorrectionModel.cpp  Reporting.cpp  ReturnCodes.cpp  TerrestrialStatisticalModel.cpp  main.cpp
app/tests/: CMakeLists.txt  TempTextFile.cpp  TestDriver.cpp  TestDriver.h  TestDriverASM.cpp  TestDriverHGTCM.cpp  TestDriverTSM.cpp  TestDriverUtils.cpp
dotnet/: p2108_dotnet.sln
dotnet/ITS.ITU.PSeries.P2108/: ITS.ITU.PSeries.P2108.csproj  P2108.cs
dotnet/ITS.ITU.PSeries.P2108/Properties/: AssemblyInfo.cs
dotnet/ITS.Propagation.P2108/: ITS.Propagation.P2108.csproj  P2108.cs
dotnet/ITS.Propagation.P2108/Properties/: AssemblyInfo.cs
dotnet/UnitTests/: BVT.cs  TestData.cs  Unit-Test-Instructions.txt  UnitTests.csproj  packages.config
dotnet/UnitTests/Properties/: AssemblyInfo.cs
dotnet/nuget/: p2108.nuspec
include/: Consts.h  P2108.h
include/ITS.ITU.PSeries.P2108/: Consts.h  Enums.h  Errors.h  P2108.h  ReturnCodes.h
matlab/: .gitignore  CallAeronauticalStatisticalModel.c  CallAeronauticalStatisticalModel_Validation.c  CallHeightGainTerminalCorrectionModel.c  CallHeightGainTerminalCorrectionModel_Validation.c  CallTerrestrialStatisticalModel.c  CallTerrestrialStatisticalModel_Validation.c  MainWrapper.c  P2108Tests.m  build.m
src/: AeronauticalStatisticalModel.cpp  CMakeLists.txt  HeightGainTerminalCorrectionModel.cpp  InverseComplementaryCumulativeDistribution.cpp  ReturnCodes.cpp  TerrestrialStatisticalModel.cpp
tests/: AeronauticalStatisticalModelTestData.csv  CMakeLists.txt  HeightGainTerminalCorrectionModelTestData.csv  TestAeronauticalStatisticalModel.cpp  TestHeightGainTerminalCorrectionModel.cpp  TestInverseComplementaryCumulativeDistribution.cpp  TestTerrestrialStatisticalModel.cpp  TestUtils.cpp  TestUtils.h
tests/data/: AeronauticalStatisticalModelTestData.csv  HeightGainTerminalCorrectionModelTestData.csv  TerrestrialStatisticalModelTestData.csv
win32/: p2108.def  p2108.rc  p2108.sln  p2108.vcxproj  p2108.vcxproj.filters  resource.h
